# VANT-Conceptual-Project

./: README.md  pyproject.toml
src/: Estudo_sensibilidade_LD_Wf.m  Extraction_LDmax_ARwet_curve.m  MTOW_Missao1_Reconhecimento.m  MTOW_Missao2_Alijamento.m  RazaoDeSubida.m
src/Entrega_1/: Estudo_sensibilidade_LD_Wf.m  MTOW_Missao1_Reconhecimento.m
src/Entrega_1/Raymer_data/: Raymer_data_fixed_gear_prop_aircraft.csv
src/Entrega_2/: DiagramaRestricoes.py  EstimativaEstatistica.py
src/Entrega_3/: MTOW_Missao1_Reconhecimento.m  MTOW_Missao2_Alijamento.m
src/Entrega_4/: DiagramaRestricoes_corrigido.py  MTOW_Missao1_Reconhecimento.m  MTOW_Missao2_Alijamento.m  VANT.vsp3  wheel_sizing.py
src/Entrega_5/: avl_wrapper.py  cruise.avl  takeoff.avl  weight_estimate.py
